force-app/main/default/objects/Lien__c/Lien__c.object-meta.xml
<CustomObject>
    <label>Lien</label>
    <nameField>
        <displayFormat>LIEN-{00000}</displayFormat>
        <label>Lien Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>