force-app/main/default/objects/Lien__c/fields/Assertion_Date__c.field-meta.xml
<CustomField>
    <fullName>Assertion_Date__c</fullName>
    <label>Assertion Date</label>
    <type>Date</type>
</CustomField>