force-app/main/default/objects/Lien__c/fields/Final_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Paid_Amount__c</fullName>
    <label>Final Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>