force-app/main/default/objects/Lien__c/fields/Lien_Type__c.field-meta.xml
<CustomField>
    <fullName>Lien_Type__c</fullName>
    <label>Lien Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Provider</fullName>
            </value>
            <value>
                <fullName>Health Insurance Subrogation</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>ERISA</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Attorney Lien</fullName>
            </value>
            <value>
                <fullName>Government Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>