force-app/main/default/objects/Lien__c/fields/Lienholder_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Attorney__c</fullName>
    <label>Lienholder Attorney</label>
    <length>100</length>
    <type>Text</type>
</CustomField>