force-app/main/default/objects/Lien__c/fields/Lienholder_Email__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Email__c</fullName>
    <label>Lienholder Email</label>
    <type>Email</type>
</CustomField>