force-app/main/default/objects/Lien__c/fields/Lienholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Name__c</fullName>
    <label>Lienholder Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>