force-app/main/default/objects/Lien__c/fields/Lienholder_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Phone__c</fullName>
    <label>Lienholder Phone</label>
    <type>Phone</type>
</CustomField>