force-app/main/default/objects/Lien__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Liens</relationshipLabel>
    <relationshipName>Liens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>