force-app/main/default/objects/Lien__c/fields/Medical_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Medical_Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical Treatment</label>
    <referenceTo>Medical_Treatment__c</referenceTo>
    <relationshipLabel>Liens</relationshipLabel>
    <relationshipName>Liens</relationshipName>
    <type>Lookup</type>
</CustomField>