force-app/main/default/objects/Lien__c/fields/Negotiated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Amount__c</fullName>
    <label>Negotiated Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>