force-app/main/default/objects/Lien__c/fields/Savings__c.field-meta.xml
<CustomField>
    <fullName>Savings__c</fullName>
    <formula>Original_Amount__c -
BLANKVALUE(
    Final_Paid_Amount__c,
    BLANKVALUE(
        Negotiated_Amount__c,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>