force-app/main/default/objects/Lien__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential — Unasserted</fullName>
            </value>
            <value>
                <fullName>Asserted</fullName>
            </value>
            <value>
                <fullName>Under Negotiation</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>